Fixed some BaseLoadBalancer issues to do with trying to maintain the assignments of replicas better w.r.t the constraints